terraform/modules/security_group/main.tf
resource "aws_security_group" "tm_app_sg" {
  name        = var.sg_name
  description = "Security group for ALB and ECS tasks (allow HTTP, HTTPS, and application traffic)"
  vpc_id      = var.vpc_id

  # Ingress for ALB (allowing HTTP, HTTPS, and App traffic)
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Egress rule (allow all outbound traffic)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "tm-app-sg"
  }
}
